# UltraForward

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
uf/: __main__.py
uf/src/: bot.py  cache.py  config.py  job.py  log.py  spam_detect.py  verify.py
uf/src/sql/: __init__.py  model.py  repository.py
